--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0, width=device-width">
-		<title>Web Template</title>
+		<title>Media Query</title>
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<h1 class="hidden">Media Query</h1>
 		<!-- Content Goes Here -->
-
+		<div class="container">
+			<section id="mobile">
+				<section class="box1">Box 1</section>
+				<section class="box2">Box 2</section>
+			</section>
+			<section id="desktop">
+				<section class="box3">Box 3</section>
+				<section class="box4">Box 4</section>
+			</section>
+		</div>
 		<script href="js/main.js"></script>
 	</body>
 
