--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<!-- Content Goes Here -->
 		<div class="container">
 			<section id="mobile">
-				<section class="box1">Box 1</section>
-				<section class="box2">Box 2</section>
+				<section id="box1">Box 1</section>
+				<section id="box2">Box 2</section>
 			</section>
 			<section id="desktop">
-				<section class="box3">Box 3</section>
-				<section class="box4">Box 4</section>
+				<section id="box3">Box 3</section>
+				<section id="box4">Box 4</section>
 			</section>
 		</div>
 		<script href="js/main.js"></script>
