--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 		<h1 class="hidden">Media Query</h1>
 		<!-- Content Goes Here -->
 		<div class="container">
-			<section id="mobile">
-				<section id="box1">Box 1</section>
-				<section id="box2">Box 2</section>
-			</section>
-			<section id="desktop">
-				<section id="box3">Box 3</section>
-				<section id="box4">Box 4</section>
+			<section class="mobile">
+				<section class="box1">Box 1</section>
+				<section class="box2">Box 2</section>
+				<section class="box3">Box 3</section>
+				<section class="box4">Box 4</section>
 			</section>
 		</div>
 		<script href="js/main.js"></script>
